# clinvar-gk-pilot

./: .gitignore  README.md  build.clj  deps.edn  ndjson-tabix.md  notes.md  pyproject.toml
.clj-kondo/: config.edn
src/clinvar_gk_pilot/: README.txt  confluent.py  gk_pilot.py  main.clj  main.py  statement_schema.clj  vrs_python.clj
