[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clinvar_gk_pilot"
version = "0.0.1"
authors = [
  { name="Kyle Ferriter", email="kferrite@broadinstitute.org" },
]
description = "Functions for transforming ClinVar into GA4GH GKS forms"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests~=2.31.0"
]
